# kingdee-search-mcp

./: .gitignore  DEPLOY.md  EXAMPLE_OUTPUT.md  INSTALL.md  MANIFEST.in  PUBLISH.md  README.md  download_dependencies.bat  main.py  package_all.bat  publish.bat  publish.sh  pyproject.toml  requirements.txt  run.bat  run.ps1  run.sh  setup.py  test_search.py
kd_search_mcp/: __init__.py  main.py
src/: __init__.py  __main__.py  kingdee_search_server.py
tests/: test_main.py
