[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kd-search-mcp"
version = "0.1.0"
description = "A FastMCP-based client that searches Kingdee developer resources."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "mcp[cli]>=1.21.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/kd-search-mcp"

[tool.setuptools.packages.find]
where = ["."]
